--- a/vehicules.html
+++ b/vehicules.html
@@ -24,6 +24,208 @@
         </li>
     </ul>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <div class="container mt-4">
+      <!-- Sección Chevrolet -->
+      <h4>Chevrolet</h4>
+      <hr>
+      <div class="row">
+          <div class="col-md-4">
+              <div class="card" style="width: 18rem;">
+                  <img src="img/chevrolet1.jpg" class="card-img-top" alt="Chevrolet 1">
+                  <div class="card-body">
+                      <h5 class="card-title">Chevrolet Onix</h5>
+                      <p class="card-text">Compacto y eficiente, ideal para la ciudad.</p>
+                      <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#chevrolet1Modal">Go</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card" style="width: 18rem;">
+                  <img src="img/chevrolet2.jpg" class="card-img-top" alt="Chevrolet 2">
+                  <div class="card-body">
+                      <h5 class="card-title">Chevrolet Turbo</h5>
+                      <p class="card-text">Potencia turbo para una conducción dinámica.</p>
+                      <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#chevrolet2Modal">Go</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card" style="width: 18rem;">
+                  <img src="img/chevrolet3.jpg" class="card-img-top" alt="Chevrolet 3">
+                  <div class="card-body">
+                      <h5 class="card-title">Chevrolet Joy</h5>
+                      <p class="card-text">Económico y confiable, perfecto para el día a día.</p>
+                      <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#chevrolet3Modal">Go</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+  
+      <!-- Sección Nissan -->
+      <h4 class="mt-4">Nissan</h4>
+      <hr>
+      <div class="row">
+          <div class="col-md-4">
+              <div class="card" style="width: 18rem;">
+                  <img src="img/nissan1.jpg" class="card-img-top" alt="Nissan 1">
+                  <div class="card-body">
+                      <h5 class="card-title">Nissan Versa</h5>
+                      <p class="card-text">Sedán espacioso y cómodo para la familia.</p>
+                      <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#nissan1Modal">Go</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card" style="width: 18rem;">
+                  <img src="img/nissan2.jpg" class="card-img-top" alt="Nissan 2">
+                  <div class="card-body">
+                      <h5 class="card-title">Nissan Qashqai</h5>
+                      <p class="card-text">SUV compacto con tecnología avanzada.</p>
+                      <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#nissan2Modal">Go</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card" style="width: 18rem;">
+                  <img src="img/nissan3.jpg" class="card-img-top" alt="Nissan 3">
+                  <div class="card-body">
+                      <h5 class="card-title">Nissan X-trail Power</h5>
+                      <p class="card-text">Robusto y potente, ideal para aventuras.</p>
+                      <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#nissan3Modal">Go</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  
+  <!-- Modales Chevrolet -->
+  <div class="modal fade" id="chevrolet1Modal" tabindex="-1" aria-labelledby="chevrolet1ModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="chevrolet1ModalLabel">Chevrolet Onix</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                  <p>Modelo: Chevrolet Onix</p>
+                  <p>Cilindraje: 1.0L Turbo</p>
+                  <p>Cuidados: Cambio de aceite cada 10,000 km</p>
+                  <p>Precio: $15,000</p>
+                  <p>Ficha técnica: Motor 1.0L Turbo, 116 HP, Transmisión automática de 6 velocidades.</p>
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+              </div>
+          </div>
+      </div>
+  </div>
+  
+  <div class="modal fade" id="chevrolet2Modal" tabindex="-1" aria-labelledby="chevrolet2ModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="chevrolet2ModalLabel">Chevrolet Turbo</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                  <p>Modelo: Chevrolet Cruze Turbo</p>
+                  <p>Cilindraje: 1.4L Turbo</p>
+                  <p>Cuidados: Cambio de aceite cada 10,000 km</p>
+                  <p>Precio: $20,000</p>
+                  <p>Ficha técnica: Motor 1.4L Turbo, 153 HP, Transmisión automática de 6 velocidades.</p>
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+              </div>
+          </div>
+      </div>
+  </div>
+  
+  <div class="modal fade" id="chevrolet3Modal" tabindex="-1" aria-labelledby="chevrolet3ModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="chevrolet3ModalLabel">Chevrolet Joy</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                  <p>Modelo: Chevrolet Joy</p>
+                  <p>Cilindraje: 1.4L</p>
+                  <p>Cuidados: Cambio de aceite cada 10,000 km</p>
+                  <p>Precio: $12,000</p>
+                  <p>Ficha técnica: Motor 1.4L, 98 HP, Transmisión manual de 5 velocidades.</p>
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+              </div>
+          </div>
+      </div>
+  </div>
+  
+  <!-- Modales Nissan -->
+  <div class="modal fade" id="nissan1Modal" tabindex="-1" aria-labelledby="nissan1ModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="nissan1ModalLabel">Nissan Versa</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                  <p>Modelo: Nissan Versa</p>
+                  <p>Cilindraje: 1.6L</p>
+                  <p>Cuidados: Cambio de aceite cada 10,000 km</p>
+                  <p>Precio: $14,000</p>
+                  <p>Ficha técnica: Motor 1.6L, 122 HP, Transmisión automática CVT.</p>
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+              </div>
+          </div>
+      </div>
+  </div>
+  
+  <div class="modal fade" id="nissan2Modal" tabindex="-1" aria-labelledby="nissan2ModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="nissan2ModalLabel">Nissan Qashqai</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                  <p>Modelo: Nissan Qashqai</p>
+                  <p>Cilindraje: 2.0L</p>
+                  <p>Cuidados: Cambio de aceite cada 10,000 km</p>
+                  <p>Precio: $25,000</p>
+                  <p>Ficha técnica: Motor 2.0L, 141 HP, Transmisión automática CVT.</p>
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+              </div>
+          </div>
+      </div>
+  </div>
+  
+  <div class="modal fade" id="nissan3Modal" tabindex="-1" aria-labelledby="nissan3ModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="nissan3ModalLabel">Nissan X-trail Power</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                  <p>Modelo: Nissan X-Trail</p>
+                  <p>Cilindraje: 2.5L</p>
+                  <p>Cuidados: Cambio de aceite cada 10,000 km</p>
+                  <p>Precio: $30,000</p>
+                  <p>Ficha técnica: Motor 2.5L, 169 HP, Transmisión automática CVT.</p>
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+              </div>
+          </div>
+      </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
