feat: add test driver page
- add form page for test driver
- add favicon
- change images

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>AutoMotion</title>
     <link rel="stylesheet" href="styles/style.css">
     <!-- Bootstrap 5 -->
@@ -38,36 +39,36 @@
           <div class="carousel-item active">
             <img src="img/nav1.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Título 3</h5>
-                <p>Descripción para la imagen 3.</p>
+                <h5>Domina el Camino</h5>
+                <p>Conduce hacia el éxito. Cada kilómetro es una nueva oportunidad para descubrir lo que eres capaz de lograr.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/nav2.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Título 3</h5>
-                <p>Descripción para la imagen 3.</p>
+                <h5>Libertad al Volante</h5>
+                <p>Siente el viento, la velocidad y la libertad que solo un gran auto puede ofrecer. El viaje es tan importante como el destino.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/nav3.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Título 3</h5>
-                <p>Descripción para la imagen 3.</p>
+                <h5>Aventura Sin Límites</h5>
+                <p>Cada viaje es una nueva aventura. ¿Estás listo para descubrir lo que hay más allá del horizonte?</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/nav4.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Título 3</h5>
-                <p>Descripción para la imagen 3.</p>
+                <h5>Potencia en Movimiento</h5>
+                <p>Explora nuevos horizontes con confianza. La carretera está llena de posibilidades, y tú tienes el control.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="img/nav5.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Título 3</h5>
-                <p>Descripción para la imagen 3.</p>
+                <h5>Diseño que Impulsa</h5>
+                <p>La elegancia y el poder se encuentran en cada curva. Conduce el cambio que quieres ver en el mundo.</p>
             </div>
           </div>
         </div>
