--- a/about.html
+++ b/about.html
@@ -6,7 +6,10 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <title>Sobre Nosotros</title>
     <!-- Bootstrap 5 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="styles/about.css">
 </head>
 <body>
     <!-- navbar -->
@@ -24,6 +27,87 @@
           <a class="nav-link" href="about.html">Sobre Nosotros</a>
         </li>
     </ul>
+
+    <section class="container mt-5">
+      <div class="accordion" id="accordionExample">
+          <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      Sobre la Empresa
+                  </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                      AutoCorp se dedica a la venta y mantenimiento de vehículos de alta gama. Con más de 20 años en el mercado, ofrecemos la mejor experiencia para los amantes del automovilismo.
+                  </div>
+              </div>
+          </div>
+          <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      Misión
+                  </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                      Nuestra misión es brindar vehículos de alta calidad y soluciones integrales de movilidad, ofreciendo un servicio personalizado que supere las expectativas de nuestros clientes.
+                  </div>
+              </div>
+          </div>
+          <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      Visión
+                  </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                      Convertirnos en la empresa líder en innovación automotriz, ofreciendo soluciones sostenibles y tecnológicas que transformen la movilidad del futuro.
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+
+  <!-- Sección de Nuestro Equipo -->
+  <section class="container mt-5">
+      <h2 class="text-center">NUESTRO EQUIPO</h2>
+      <div class="row mt-4">
+          <div class="col-md-4 text-center">
+              <img src="img/team1.jpg" class="rounded-circle mb-3 profile-pic" alt="Miembro del equipo">
+              <h5>Juan Pérez</h5>
+              <p>CEO - Fundador</p>
+              <p>Juan cuenta con más de 30 años de experiencia en la industria automotriz y es la mente detrás del éxito de AutoCorp.</p>
+              <div>
+                  <a href="#" class="btn btn-primary"><i class="bi bi-facebook"></i></a>
+                  <a href="#" class="btn btn-primary"><i class="bi bi-twitter"></i></a>
+                  <a href="#" class="btn btn-primary"><i class="bi bi-linkedin"></i></a>
+              </div>
+          </div>
+          <div class="col-md-4 text-center">
+              <img src="img/team2.jpg" class="rounded-circle mb-3 profile-pic" alt="Miembro del equipo">
+              <h5>María Gómez</h5>
+              <p>Directora de Marketing</p>
+              <p>María ha liderado campañas exitosas de marketing, posicionando a AutoCorp como una de las marcas más reconocidas del sector.</p>
+              <div>
+                  <a href="#" class="btn btn-primary"><i class="bi bi-facebook"></i></a>
+                  <a href="#" class="btn btn-primary"><i class="bi bi-twitter"></i></a>
+                  <a href="#" class="btn btn-primary"><i class="bi bi-linkedin"></i></a>
+              </div>
+          </div>
+          <div class="col-md-4 text-center">
+              <img src="img/team3.jpg" class="rounded-circle mb-3 profile-pic" alt="Miembro del equipo">
+              <h5>Pedro Sánchez</h5>
+              <p>Jefe de Ingeniería</p>
+              <p>Con una pasión por la tecnología, Pedro ha liderado el desarrollo de los vehículos más innovadores de AutoCorp.</p>
+              <div>
+                  <a href="#" class="btn btn-primary"><i class="bi bi-facebook"></i></a>
+                  <a href="#" class="btn btn-primary"><i class="bi bi-twitter"></i></a>
+                  <a href="#" class="btn btn-primary"><i class="bi bi-linkedin"></i></a>
+              </div>
+          </div>
+      </div>
+  </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
