--- a/vehicules.html
+++ b/vehicules.html
@@ -10,30 +10,20 @@
 </head>
 <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Vehiculos</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="vehicules.html">Vehiculo</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="test.html">Test Drive</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">Sobre Nosotros</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="vehicules.html">Vehiculo</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="test.html">Test Drive</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">Sobre Nosotros</a>
+        </li>
+    </ul>
 
     <div class="container mt-4">
         <!-- Sección Chevrolet -->
